--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web Lyon, web design Lyon, stratégie web" src="img/title.png" />
-			</div>
+			<h2 id="qui">Notre agence</h2>
+			<p>La chouette agence est une agence de webdesign qui aide les entreprises à devenir attractive et visibles sur Internet</p>
+		</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
