--- a/page2.html
+++ b/page2.html
@@ -97,7 +97,8 @@
 					<div class="form-group">
 						<label>
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
 					</div> 
 					<button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
