--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<form id="form_1">
-								<h2>Contact :</h2>
+								<h2>Contact</h2>
 								<div class="form-group">
 									<label>
 										Nom
