--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand focusedInputBlack" href="/"><img src="img/la-chouette-agence.png"
+							<a class="navbar-brand focusedInputBlack" href="index.html"><img src="img/la-chouette-agence.png"
 									alt="titre de la chouette agence" /></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 								data-toggle="collapse" data-target=".navbar-1">
@@ -48,7 +48,7 @@
 						<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a class="focusedInputBlack" href="/">Accueil</a>
+									<a class="focusedInputBlack" href="index.html">Accueil</a>
 								</li>
 								<li>
 									<a class="focusedInputBlack" href="contact.html">Contact &gt;</a>
