--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/magazines.jpg" data-gallery-id="gallery-1"
 								data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-									src="img/magazines.jpg" alt="image d'illustration - magazines"
+									src="img/1.jpg" alt="image d'illustration - magazines"
 									class="img-responsive portfolio-thumb" /></a>
 							<h3 class="mg-md text-center">
 								Refonte d'un site web pour un journal local
@@ -251,7 +251,7 @@
 						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-									src="img/photographe.jpg" class="img-responsive portfolio-thumb"
+									src="img/2.jpg" class="img-responsive portfolio-thumb"
 									alt="image d'illustration - Photographe" /></a>
 							<h3 class="mg-md text-center">
 								Création d'un site web pour photographes
@@ -265,7 +265,7 @@
 						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/materiel-photo.jpg" data-gallery-id="gallery-1"
 								data-caption="Création d'un site internet pour un voyageur"
-								data-frame="snapshot-lb"><img src="img/materiel-photo.jpg"
+								data-frame="snapshot-lb"><img src="img/3.bmp"
 									class="img-responsive portfolio-thumb"
 									alt="images d'illustration - Matériel photo" /></a>
 							<h3 class="mg-md text-center">
@@ -279,7 +279,7 @@
 						<article class="col-sm-6">
 							<a href="#" data-lightbox="img/bureau.jpg" data-gallery-id="gallery-1"
 								data-caption="Conception d'un site pour une agence de mariage"
-								data-frame="snapshot-lb"><img src="img/bureau.jpg"
+								data-frame="snapshot-lb"><img src="img/4.bmp"
 									class="img-responsive portfolio-thumb"
 									alt="image d'illustration - organisation d'un mariage" /></a>
 							<h3 class="mg-md text-center">
