ajout apple-touch

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+	<link rel="apple-touch-icon" href="/example.png">
 	<meta charset="utf-8">
 	<meta name="description" content="Votre entreprise de web design à lyon - Contactez la Chouette Agence">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
