--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<link rel="apple-touch-icon" href="/example.png">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160268117-2"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
