--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 							<div class="col-sm-3">
 								<div class="text-center">
 									<a id="instagram" class="social" href="https://www.instagram.com"><span
-											class="fa fa-instagram icon-md"> </span></a>
+											class="fa fa-instagram icon-md">.</span></a>
 								</div>
 							</div>
 						</div>
