--- a/index.html
+++ b/index.html
@@ -330,19 +330,19 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a id="twitter" class="social" href="https://twitter.com"><span
+									<a id="twitter" class="social" href="https://twitter.com">.<span
 											class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a id="facebook" class="social" href="https://www.facebook.com"><span
+									<a id="facebook" class="social" href="https://www.facebook.com">.<span
 											class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a id="dribbble" class="social" href="https://dribbble.com"><span
+									<a id="dribbble" class="social" href="https://dribbble.com">.<span
 											class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
