--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<a class="focusedInputBlack" href="/">Accueil</a>
 								</li>
 								<li>
-									<a class="focusedInputBlack" href="contact.html">Contact &gt;</a>
+									<a class="focusedInputBlack" href="contact.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -348,8 +348,8 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a id="instagram" class="social" href="https://www.instagram.com"><span
-											class="fa fa-instagram icon-md">.</span></a>
+									<a id="instagram" class="social" href="https://www.instagram.com">.<span
+											class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
